Adding changes to .tex and also .gitignore

--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,6 @@
 \documentclass[10pt,twocolumn,letterpaper]{article}
 \usepackage[ansinew]{inputenc}
 \usepackage[portuges,brazil,english]{babel}
-\usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{model}
 \usepackage{times}
@@ -26,7 +25,7 @@
 
 %%% Title and authors %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title{Here goes the report title}
-\author{Vin\'{i}cius Silva \\ email         \href{vinicius.lopes.silva89@gmail.com}{vinicius.lopes.silva89@gmail.com} 
+\author{Vin\'{i}cius Silva \\ email         \href{mailto:vinicius.lopes.silva89@gmail.com}{vinicius.lopes.silva89@gmail.com} 
 \\ \and
 Mario Costa \\ email \href{mariokozta@gmail.com}{mariokozta@gmail.com}
 }
