--- a/refs.bib
+++ b/refs.bib
@@ -1,45 +1,14 @@
-@ARTICLE{Ni_2009,
- author = {Kai Ni and Anitha Kannan and Antonio Criminisi and John Winn},
- title = {Epitomic Location Recognition},
- journal = {Transactions on Pattern Analysis and Machine Intelligence (TPAMI)},
- year = {2009},
- volume = {31},
- pages = {2158-2167},
- number = {12}
+@ARTICLE{Inf_Front,
+ author = {Lee K. and Park, J. and Kim and I. et al.},
+ title = {Predicting movie success with machine learning techniques: ways to improve accuracy},
+ journal = {Information Systems Frontiers},
+ year = {2016},
+ DOI = {https://doi.org/10.1007/s10796-016-9689-z},
+ Publisher = {Springer US}
 }
 
-@INPROCEEDINGS{Ni_2008,
- author = {Kai Ni and Anitha Kannan and Antonio Criminisi and John Winn},
- title = {Epitomic Location Recognition},
- booktitle = {Proceedings of the IEEE Computer Society Conference on Computer Vision and Pattern Recognition (CVPR)},
- year = {2008},
- pages = {},
- address = {Anchorage, AK, USA}
-}
-
-@INPROCEEDINGS{Silva_2010,
- author = {Fulano Silva and Beltrano Souza},
- title = {Hey! This is my paper},
- booktitle = {European Conference on Nothing (ECN)},
- year = {2010},
- pages = {000--007},
- address = {Graz, Austria}
-}
-
-@INPROCEEDINGS{Silva_2010b,
- author = {Fulano Silva},
- title = {A paper on everything useless},
- booktitle = {European Conference on Nothing (ECN)},
- year = {2010},
- pages = {008--014},
- address = {Graz, Austria}
-}
-
-@INPROCEEDINGS{Silva_2010c,
- author = {Fulano Silva and Beltrano Souza and Sicrano Rocha},
- title = {Revisiting the classical publishing problem},
- booktitle = {European Conference on Nothing (ECN)},
- year = {2010},
- pages = {015--021},
- address = {Graz, Austria}
+@MISC{dataset,
+ author = {Fabien Daniel and Rounak Banik and Martin Ellis},
+ howpublished = "\url{https://www.kaggle.com/rounakbanik/the-movies-dataset}",
+ note = {Online; Last access 10-March-2018}
 }
