Ajuste Imagem methodology

--- a/main.tex
+++ b/main.tex
@@ -26,13 +26,13 @@
 \title{Predicting revenue in movies}
 \author{Vin\'{i}cius Silva \\ email         \href{vinicius.lopes.silva89@gmail.com}{vinicius.lopes.silva89@gmail.com} 
 \\ \and
-Mario Costa \\ email \href{mariokozta@gmail.com}{mariokozta@gmail.com}
+Mário A. Costa Jr. \\ email \href{mariokozta@gmail.com}{mariokozta@gmail.com}
 }
 
 %%% Abstract %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \maketitle
 \begin{abstract}
-Predicting the amount of money a movie can make is a valuable tool when deciding if a movie should be made or what should be adjusted for it to be successful. The revenue a movie might have is an important indicator that could be used for detecting the movies faults or qualities. This paper proposes an approach to solve this problem
+Predicting the amount of money a movie can make is a valuable tool when deciding if a movie should be made or what should be adjusted for it to be successful. The revenue a movie might have is an important indicator that could be used for detecting the movies faults or qualities. This paper proposes an approach to solve this problem.  
 \end{abstract}
 
 %%% Introduction %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -44,11 +44,11 @@ The movie industry might not be able to properly know when a movie will have a h
 This paper proposes to create a predictive model about how much revenue a given movie can have. In order to do this, the dataset in \cite{dataset} is going to be used. The amount of revenue a movie can have will vary according to the time it has passed after its launch. For this research, we are going to adopt the revenue found in the dataset and validate the predictions using this same dataset.
 
 %%% Add section %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Proposed Solution}
+\section{Proposed Solution}1
 A movie revenue could vary based on its opening week, genre, actors and other unknown variables. Since the variables might vary and are not necessarily known, this paper proposes an approach based on clustering algorithms and then running a regression model for each discovered cluster. 
 
 \begin{figure}[h!]
- \includegraphics[width=0.99\columnwidth]{pics/methodology.png}
+ \includegraphics[width=0.99\columnwidth]{pics/methodology3.png}
  \caption{Flow describing the approach to predict movies revenue.\label{fig:methodology}}
 \end{figure}
 
