--- a/refs.bib
+++ b/refs.bib
@@ -1,4 +1,4 @@
-@ARTICLE{Inf_Front,
+@ARTICLE{Inf_Report,
  author = {Lee K. and Park, J. and Kim and I. et al.},
  title = {Predicting movie success with machine learning techniques: ways to improve accuracy},
  journal = {Information Systems Frontiers},
@@ -11,4 +11,11 @@
  author = {Fabien Daniel and Rounak Banik and Martin Ellis},
  howpublished = "\url{https://www.kaggle.com/rounakbanik/the-movies-dataset}",
  note = {Online; Last access 10-March-2018}
+}
+@ARTICLE{Inf_Report2, 
+autor = {Dan Zinski},
+title = {Avengers 3 \& 4 Budget May Cost Marvel Studios \$1 Billion},
+journal = {ScreenRant},
+year = {2017},
+DOI =  {https://screenrant.com/avengers-3-4-infinity-war-movie-budget-cost}
 }
