--- a/refs.bib
+++ b/refs.bib
@@ -13,9 +13,10 @@
  note = {Online; Last access 10-March-2018}
 }
 @ARTICLE{Inf_Report2, 
-autor = {Dan Zinski},
+author = {Dan Zinski},
 title = {Avengers 3 \& 4 Budget May Cost Marvel Studios \$1 Billion},
 journal = {ScreenRant},
 year = {2017},
-DOI =  {https://screenrant.com/avengers-3-4-infinity-war-movie-budget-cost}
+DOI =  {https://screenrant.com/avengers-3-4-infinity-war-movie-budget-cost},
+note = {Online; Last access 11-March-2018}
 }
